; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_rawmidi.c_snd_rawmidi_runtime_free.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/core/extr_rawmidi.c_snd_rawmidi_runtime_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_rawmidi_substream = type { %struct.snd_rawmidi_runtime* }
%struct.snd_rawmidi_runtime = type { %struct.snd_rawmidi_runtime* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_rawmidi_substream*)* @snd_rawmidi_runtime_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @snd_rawmidi_runtime_free(%struct.snd_rawmidi_substream* %0) #0 {
  %2 = alloca %struct.snd_rawmidi_substream*, align 8
  %3 = alloca %struct.snd_rawmidi_runtime*, align 8
  store %struct.snd_rawmidi_substream* %0, %struct.snd_rawmidi_substream** %2, align 8
  %4 = load %struct.snd_rawmidi_substream*, %struct.snd_rawmidi_substream** %2, align 8
  %5 = getelementptr inbounds %struct.snd_rawmidi_substream, %struct.snd_rawmidi_substream* %4, i32 0, i32 0
  %6 = load %struct.snd_rawmidi_runtime*, %struct.snd_rawmidi_runtime** %5, align 8
  store %struct.snd_rawmidi_runtime* %6, %struct.snd_rawmidi_runtime** %3, align 8
  %7 = load %struct.snd_rawmidi_runtime*, %struct.snd_rawmidi_runtime** %3, align 8
  %8 = getelementptr inbounds %struct.snd_rawmidi_runtime, %struct.snd_rawmidi_runtime* %7, i32 0, i32 0
  %9 = load %struct.snd_rawmidi_runtime*, %struct.snd_rawmidi_runtime** %8, align 8
  %10 = call i32 @kfree(%struct.snd_rawmidi_runtime* %9)
  %11 = load %struct.snd_rawmidi_runtime*, %struct.snd_rawmidi_runtime** %3, align 8
  %12 = call i32 @kfree(%struct.snd_rawmidi_runtime* %11)
  %13 = load %struct.snd_rawmidi_substream*, %struct.snd_rawmidi_substream** %2, align 8
  %14 = getelementptr inbounds %struct.snd_rawmidi_substream, %struct.snd_rawmidi_substream* %13, i32 0, i32 0
  store %struct.snd_rawmidi_runtime* null, %struct.snd_rawmidi_runtime** %14, align 8
  ret i32 0
}

declare dso_local i32 @kfree(%struct.snd_rawmidi_runtime*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
